# threads-sdk

./: .gitignore  LICENSE  README.md  Threads Manager.bat  hn_post.md  pyproject.toml  reddit_post.md  threads_manager.py
config/: personas.yaml  post_history.json  settings.yaml
scripts/: auto_post.py
tests/: conftest.py  test_async_client.py  test_auth.py  test_cli.py  test_client.py  test_exceptions.py  test_models.py
threads_sdk/: __init__.py  async_client.py  auth.py  cli.py  client.py  exceptions.py  models.py
threads_sdk/autoposter/: __init__.py  configurator.py  generator.py  imagegen.py  persona.py  scheduler.py
