[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "threads-sdk"
version = "0.1.0"
description = "Modern Python SDK for Meta's Threads API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "dai86" }]
keywords = ["threads", "meta", "api", "sdk", "social-media"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "mypy>=1.10",
    "ruff>=0.5",
]

[project.scripts]
threads-sdk = "threads_sdk.cli:main"

[project.urls]
Homepage = "https://github.com/dai86/threads-sdk"
Repository = "https://github.com/dai86/threads-sdk"
Issues = "https://github.com/dai86/threads-sdk/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.mypy]
python_version = "3.10"
strict = true
